# asteroids

./: .gitignore  CMakeLists.txt  Makefile  readme.md  run_multi.sh
src/: animation.c  common.h  debug.c  entity.c  events.c  game.c  game.h  main.c  netcode.c  netutils.c  physics.c  player.c  player.h  queue.c  random.c  sfx.c  ufo.c
src/common/: common.h  linked_list.c  queue.c  settings.h
src/headers/: animation.h  debug.h  entity.h  events.h  fake_threads.h  game.h  netcode.h  physics.h  player.h  sfx.h  ufo.h
